tests/paczka1/fuzzy1/21941836.err
Error in line 8: S754 S754 70,3
Error in line 16: S754 A622 17,1
Error in line 18: S754 S123 94,6
Error in line 21: S754 A426 10,8
Error in line 14: 8aChtai5 S754 242,4
Error in line 38: 3Sn A426 96,9
Error in line 36: S754 A622 41,8
